--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 
     <!-- Background Music -->
     <audio id="bgMusic" loop>
-        <source src="music.mp3" type="audio/mpeg">
+    <source src="Blue.mp3" type="audio/mpeg">
     </audio>
-
     <script src="script.js"></script>
 </body>
 </html>
