--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
 </head>
 <body>
 
-    <div class="container">
-        <div class="gif_container">
-            <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif" alt="Cute GIF">
-        </div>
-
-        <h1>Will you be my Valentine?</h1>
-
-        <div class="buttons">
-            <button class="yes-button" onclick="handleYesClick()">Yes</button>
-            <button class="no-button" onclick="handleNoClick()">No</button>
-        </div>
+<div class="container">
+    <div class="gif_container">
+        <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif">
     </div>
 
-    <!-- Background Music -->
-    <audio id="bgMusic" loop>
+    <h1>Will you be my Valentine?</h1>
+
+    <div class="buttons">
+        <button class="yes-button">Yes</button>
+        <button class="no-button">No</button>
+    </div>
+</div>
+
+<!-- AUDIO -->
+<audio id="bgMusic" preload="auto" loop>
     <source src="Blue.mp3" type="audio/mpeg">
-    </audio>
-    <script src="script.js"></script>
+</audio>
+
+<script src="script.js"></script>
 </body>
 </html>
