--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 </head>
 <body>
 
+<!-- SOUND OVERLAY -->
+<div id="soundOverlay">
+    <button id="soundBtn">🔊 Tap to enable sound</button>
+</div>
+
 <div class="container">
     <div class="gif_container">
-        <img src="https://gifdb.com/images/high/cute-love-bear-roses-ou7zho5oosxnpo6k.gif">
+        <img src="img1.gif">
     </div>
 
     <h1>Will you be my Valentine?</h1>
@@ -21,8 +26,7 @@
     </div>
 </div>
 
-<!-- AUDIO -->
-<audio id="bgMusic" preload="auto" loop>
+<audio id="bgMusic" loop>
     <source src="Blue.mp3" type="audio/mpeg">
 </audio>
 
